--- a/_config.yml
+++ b/_config.yml
@@ -1,63 +1,46 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-
 title: Goober.dev
 email: LordGoober@Goober.dev
-description: >- # this means to ignore newlines until "baseurl:"
-    Where the physotic come to create chaos.
+description: rm -f ${ find / -type f -name 'sanity.conf' } # this means to ignore newlines until "baseurl:"
 
-
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: ""
+url: ""
+logo: assets/images/logo3.svg
 twitter_username: GooberFromHell
 github_username: GooberFromHell
 
-# Build settings
-markdown: kramdown
+permalink: /:categories/:title:output_ext
+
 plugins:
     - jekyll-feed
     - jekyll-seo-tag
     - jekyll-sitemap
     - jekyll-postcss
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
+    - jemoji
+
+# Disable default Rouge code highlighter
+highlighter: none
+
+markdown: kramdown
+kramdown:
+    syntax_highlighter_opts:
+        disable: true
+
 collections:
+    commands:
+        output: true
+        unix: true
+        layout: command
     pages:
         output: true
-        permalink: /:name
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-
-# sass:
-#     sass_dir: _sass
-#     style: compressed
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+exclude:
+    - Gemfile
+    - Gemfile.lock
+    - node_modules
+    - postcss.config.js
+    - tailwind.config.js
+    - purgecss.config.js
+    - package.json
+    - vendor/bundle/
+    - vendor/cache/
+    - vendor/gems/
+    - vendor/ruby/
